@@ -1,3 +1,8 @@
+2009-02-02  Petr Mikulik  <mikulik@physics.muni.cz>
+
+	* src/mouse.c (lookup_key): Use exact match, otherwise F10, F11, or F12
+	hotkeys bind to F1.
+
 2009-01-28  Petr Mikulik  <mikulik@physics.muni.cz>
 
 	* src/breaders.c (edf_filetype_function): Fix for long headers.
